--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -59,11 +59,32 @@
     justify-content: flex-end;
   }
   
-  .nav-item {
+  /* .nav-item {
     height: 80px;
     border-bottom: 2px solid transparent;
+  } */
+  
+  .nav-item {
+    height: 80px;
+    position: relative;
   }
   
+  .nav-item::before {
+    content: "";
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: transparent;
+    transition: background-color 0.3s ease;
+  }
+  
+  .nav-item:hover::before {
+    background-color: #A5CFB9;
+  }
+  
+
   .nav-item:hover {
     border-bottom: 2px solid #A5CFB9;
   }
